# codex-token-bola-sandbox-public

./: .releaserc.json  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: README-policy-test.md  dependabot.yml
assets/: dashboard.css  dashboard.html  dashboard.js
docs/: architecture-overview.md  dashboard-api-contract.md  public-ops-path-policy.md  public-ruleset-checklist.md
hooks/: token-usage.py
scripts/: analysis_inputs.py  build_analytics.py  build_analytics_io.py  build_analytics_rows.py  build_analytics_schema.py  build_analytics_tool_calls.py  cancel_control.py  codex_token_usage.py  compact_raw.py  dashboard_cleanup.py  dashboard_cleanup_common.py  dashboard_cleanup_contract.py  dashboard_cleanup_payload.py  dashboard_cleanup_recovery.py  dashboard_cleanup_retention.py  dashboard_fixture_data.py  dashboard_freshness.py  dashboard_queries.py  dashboard_query_helpers.py  normalize.py  playwright_dashboard_check.py  playwright_dashboard_cleanup.py  playwright_dashboard_desktop.py  playwright_dashboard_helpers.py  playwright_dashboard_mobile.py  playwright_dashboard_toolbar.py  playwright_dashboard_tools.py  playwright_dashboard_turns.py  private_export_guard.py  progress_control.py  promotion_eligibility.py  public_candidate_surface_review.py  public_candidate_sync.py  public_main_release_guard.py  public_promotion_state.py  public_repo_bootstrap.py  public_snapshot_commit_policy.py  raw_segments.py  raw_segments_common.py  raw_segments_retention.py  (+10 more)
tests/: support.py  test_cli_contract.py  test_normalize.py  (+22 more)
(+19 files in other folders)
