[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-token-bola"
version = "0.1.0"
description = "Codex Token Bola local token usage capture, analytics, and dashboard tooling"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "ruff>=0.5,<1",
]
ui = [
  "playwright>=1.40,<2",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = ["E9", "F"]
